# Microtope

./: README.MD  azure-pipelines.yml
.github/: labeler.yml
.github/workflows/: buildAll.yml  buildCore.yml  buildPulser.yml  buildWesir.yml  buildWorker.yml  dependabot_automerge.yml  housekeeping.yml  releaseAll.yml  remove_curses.yml  trufflehog.yml
api/: Dockerfile  README.md  package-lock.json  package.json
api/src/: index.ts
api/src/models/: team.model.ts
core/: .gitignore  README.md  pom.xml
core/src/: module-info.java
core/src/main/resources/: checkstyle.xml
database/sql-files/: Step03_createTables.sql  Step04_createValidationLayer.sql  Step04_makeFunctions.sql  Step05_createViews.sql  Step07_insertSampleData.sql  Step10_grantPrivileges.sql
meta/: docker-compose-with-build.yml  docker-compose.yml
meta/documentation/: .gitignore
pulser/: .gitignore  BuildDockerfile  Dockerfile  README.md  pom.xml  settings.xml
pulser/src/: module-info.java
ui/: Dockerfile  angular.json  package-lock.json  package.json
ui/src/app/components/player-detail/: player-detail.component.spec.ts
ui/src/app/components/player-splitscreen-page/: player-splitscreen-page.component.spec.ts
ui/src/app/services/: app-config.service.spec.ts  team.service.spec.ts
wesir/: .gitignore  Dockerfile  README.md  Wesir.cabal
wesir/Resources/: MariaDB_odbc_driver_template.ini  micro-compose.yml
wesir/Src/: Checker.hs  CommandLine.hs  Program.hs
worker/: .gitignore  BuildDockerfile  Dockerfile  README.md  pom.xml
worker/src/main/java/: module-info.java
(+31 files in other folders)
